lib/src/compiler/tests/testdata/errors/15.out
error[E109]: invalid range
 --> line:5:11
  |
5 |     $a in (2..1)
  |           ^^^^^^ higher bound must be greater or equal than lower bound
  |